--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 @media screen and (min-width: 400px) {
-    
+
 } 
 
 @media screen and (min-width: 568px) {
@@ -21,4 +21,13 @@
 
 @media screen and (min-width: 1300px) {
     
+}
+
+.header {
+    background-color: black;
+    height: 15vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-right: 0.5vw;
+    margin-left: 0.5vw;
 }
